--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -40,8 +40,17 @@
             <div class="form-group">
               <button type="submit"
                       [disabled]="loginForm.invalid"
-                      class="btn btn-primary submit-btn btn-block">
+                      class="btn btn-primary submit-btn btn-block"
+                      *ngIf="!cargando">
                 Login
+              </button>
+
+              <button type="button"
+                      [disabled]="true"
+                      class="btn btn-primary submit-btn btn-block"
+                      *ngIf="cargando">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...
               </button>
             </div>
 
